test(case): commit vite html build

--- a/test/fixtures/vite/src/index.html
+++ b/test/fixtures/vite/src/index.html
@@ -19,6 +19,7 @@
   <div id="app">
     <!--app-html-->
   </div>
+  <div class="w-[55px] bg-[red]">hello</div>
   <script type="module" src="/index.js"></script>
 </body>
 
