chore: make postcss-rem-to-responsive-pixel internal

--- a/test/fixtures/vite/src/index.html
+++ b/test/fixtures/vite/src/index.html
@@ -20,6 +20,7 @@
     <!--app-html-->
   </div>
   <div class="w-[55px] bg-[red]">hello</div>
+  <div class="w-[1.5rem] bg-[#929292]">world</div>
   <script type="module" src="/index.js"></script>
 </body>
 
