--- a/demo/taro-app-vite/src/index.html
+++ b/demo/taro-app-vite/src/index.html
@@ -8,7 +8,7 @@
   <meta name="format-detection" content="telephone=no,address=no">
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
-  <title>taro-app-v4</title>
+  <title>taro-app-vite</title>
   <script><%= htmlWebpackPlugin.options.script %></script>
 </head>
 <body>
